2004-09-22  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Lowered dep on GTK+ 2.4.0.

2004-09-21  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Put depend on GTK+ 2.4 as it has been released
	for some time now and is even available on Win32.

2004-09-21  Damien Sandras  <dsandras@gnome.org>

	* lib/widgets/Makefile.am, lib/widgets/history-combo.c, 
	lib/widgets/history-combo.h: Removed the now unused history combo.

	* src/addressbook_window.cpp: Added FIXME.

	* src/calls_history_window.cpp, src/calls_history_window.h: Added
	function to retrieve all missed, given, received calls contacts.

	* src/gnomemeeting.cpp, src/main_window.cpp, src/main_window.h, 
	src/urlhandler.cpp, src/urlhandler.h: Upgraded the API and changed
	the URL bar in a GtkCompletionEntry that is able to match against
	the missed, given, received calls contacts and against the address
	book contacts.

2004-09-12  Akagic Amila  <bono@linux.org.ba>

	* configure.in: Added 'bs' to ALL_LINGUAS.

2004-09-10  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp, src/bonobo_component.cpp, 
	src/callbacks.cpp, src/chat_window.cpp, src/config.cpp,
	src/connection.cpp, src/connection.h, src/druid.cpp,
	src/endpoint.cpp, src/endpoint.h, src/gatekeeper.cpp, 
	src/gdkvideoio.cpp, src/gdkvideoio.h, src/gnomemeeting.cpp, 
	src/gnomemeeting.h, src/ils.cpp, src/ils.h, src/lid.cpp,
	src/main_window.cpp, src/main_window.h, src/misc.cpp,
	src/sound_handling.h, src/tray.cpp, src/urlhandler.cpp,
	src/urlhandler.h, src/videograbber.cpp, src/videograbber.h: Patch
	to remove global variable gm.

2004-09-10  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Fixed and incremented version number.

	* src/common.h, src/main_window.h: Added comments and fixed build
	error on sarge and suse.

2004-09-09  Damien Sandras  <dsandras@gnome.org>

	* src/common.h, src/gnomemeeting.cpp, src/main_window.cpp: Moved
	GmWindow to main_window.cpp.

2004-09-09  Damien Sandras  <dsandras@gnome.org>
